Fixed CSS styling to align center

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 
   .options {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
 
@@ -44,16 +44,14 @@ html {
     grid-gap: 1px;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
-    width: 500px;
-    height: 500px;
+    width: auto;
+    height: auto;
   }
   
   .grid-item {
     padding: 1em;
     border: 2px solid black;
     text-align: center;
-    font-size: small;
-    border-radius: 2px;
     background-color: whitesmoke;
   }
 
